[gd_scene load_steps=5 format=3 uid="uid://dxxojl8ykn4lp"]

[ext_resource type="Script" uid="uid://b4cbvm8ja4fcy" path="res://game/ui/shop/shop_menu.gd" id="1_shop_menu"]
[ext_resource type="PackedScene" uid="uid://d0m2k5x7qar3s" path="res://game/ui/player_menu/inventory_panel.tscn" id="2_inventory_panel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.08, 0.08, 0.09, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.25, 0.25, 0.28, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v0hx0"]
font_size = 10

[node name="ShopMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_shop_menu")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0.55)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Root" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="MoneyRow" type="HBoxContainer" parent="Panel/Root"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayerMoneyLabel" type="Label" parent="Panel/Root/MoneyRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Player: 0"
label_settings = SubResource("LabelSettings_v0hx0")

[node name="VendorMoneyLabel" type="Label" parent="Panel/Root/MoneyRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Vendor: 0"
label_settings = SubResource("LabelSettings_v0hx0")

[node name="MainRow" type="HBoxContainer" parent="Panel/Root"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="PlayerCol" type="VBoxContainer" parent="Panel/Root/MainRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerTitle" type="Label" parent="Panel/Root/MainRow/PlayerCol"]
layout_mode = 2
text = "Player Inventory"
label_settings = SubResource("LabelSettings_v0hx0")

[node name="PlayerInventoryPanel" parent="Panel/Root/MainRow/PlayerCol" instance=ExtResource("2_inventory_panel")]
unique_name_in_owner = true
layout_mode = 2
slot_size = Vector2(32, 32)

[node name="VendorCol" type="VBoxContainer" parent="Panel/Root/MainRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VendorTitle" type="Label" parent="Panel/Root/MainRow/VendorCol"]
layout_mode = 2
text = "Vendor Inventory"
label_settings = SubResource("LabelSettings_v0hx0")

[node name="VendorInventoryPanel" parent="Panel/Root/MainRow/VendorCol" instance=ExtResource("2_inventory_panel")]
unique_name_in_owner = true
layout_mode = 2
slot_size = Vector2(32, 32)

[node name="AmountRow" type="HBoxContainer" parent="Panel/Root"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SelectedItemLabel" type="Label" parent="Panel/Root/AmountRow"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
text = "Select an item to buy/sell"
label_settings = SubResource("LabelSettings_v0hx0")

[node name="QtySpin" type="SpinBox" parent="Panel/Root/AmountRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(52, 0)
layout_mode = 2
size_flags_horizontal = 0
min_value = 1.0
max_value = 999.0
value = 1.0

[node name="ActionsRow" type="HBoxContainer" parent="Panel/Root"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="BuyButton" type="Button" parent="Panel/Root/ActionsRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
disabled = true
text = "Buy"

[node name="SellButton" type="Button" parent="Panel/Root/ActionsRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
disabled = true
text = "Sell"

[node name="CloseButton" type="Button" parent="Panel/Root/ActionsRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Close"
